# mavlink-gbp-release

./: 0001-Fix-root-cmake-for-building-as-ros-3-rd-party-librar.patch  0001-Ignore-generated-files.patch  0002-Fix-pc.in-template.patch  0003-Add-cmake-find_package-config.patch  0004-Add-cmake-rules-for-pymavlink-installation-v2.patch  0004-Add-cmake-rules-for-pymavlink-installation.patch  0005-Add-install-rule-for-package.xml.patch  0006-Add-libdir-hack-from-urdfdom.patch  0006-Fix-python-invocation-for-mavgen-python2.patch  0007-Add-supported-dialests-list-to-find_package-script.patch  0007-Use-external-script-for-pymavlink-installation-as-ca.patch  0008-Add-libdir-hack-from-urdfdom.patch  0008-Rebase-from-upstream.patch  0009-Add-supported-dialests-list-to-find_package-script.patch  0009-Fix-root-cmake-for-building-as-ros-3-rd-party-librar.patch  0010-Fix-pc.in-template.patch  0011-Add-cmake-find_package-config.patch  0012-Add-cmake-rules-for-pymavlink-installation.patch  0013-Add-install-rule-for-package.xml.patch  0014-Fix-python-invocation-for-mavgen-python2.patch  0015-Use-external-script-for-pymavlink-installation-as-ca.patch  0016-Add-libdir-hack-from-urdfdom.patch  CMakeLists.txt  README.md  config.cmake.in  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
patch/: CMakeLists.txt  package.xml
patch/pymavlink/: CMakeLists.txt
pymavlink/: CMakeLists.txt  python_distutils_install.sh.in  setup.py
pymavlink/generator/: mavschema.xsd
pymavlink/generator/CS/: MAVLink.csproj
pymavlink/tools/: mavlink_messages_size.py
rpm/: ros-galactic-mavlink.spec  ros-humble-mavlink.spec  ros-hydro-mavlink.spec  ros-indigo-mavlink.spec  ros-jade-mavlink.spec  ros-kinetic-mavlink.spec  ros-lunar-mavlink.spec  ros-melodic-mavlink.spec  ros-noetic-mavlink.spec  ros-rolling-mavlink.spec  template.spec
