<?xml version="1.0"?>
<package format="2">
  <name>mavlink</name>
  <version>2016.5.20</version>
  <description>MAVLink message marshaling library.
  This package provides C-headers and pymavlink library
  for both 1.0 and 2.0 versions of protocol.
  </description>

  <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>

  <url type="website">http://qgroundcontrol.org/mavlink/</url>
  <url type="repository">https://github.com/mavlink/mavlink.git</url>
  <url type="bugtracker">https://github.com/mavlink/mavlink/issues</url>

  <author>Lorenz Meier</author>
  <license>LGPLv3</license>

  <buildtool_depend>cmake</buildtool_depend>
  <depend>python</depend>
  <build_depend>python-setuptools</build_depend>
  <exec_depend>catkin</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
