<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mavlink</name>
  <version>2019.12.30</version>
  <description>MAVLink message marshaling library.
  This package provides C-headers and C++11 library
  for both 1.0 and 2.0 versions of protocol.

  For pymavlink use separate install via rosdep (python-pymavlink).
  </description>

  <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>

  <url type="website">https://mavlink.io/en/</url>
  <url type="repository">https://github.com/mavlink/mavlink.git</url>
  <url type="bugtracker">https://github.com/mavlink/mavlink/issues</url>

  <author>Lorenz Meier</author>
  <license>LGPLv3</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend condition="$ROS_VERSION == 1">python</depend>

  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-lxml</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-future</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-lxml</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-future</build_depend>

  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
